# maya-brew

./: Dockerfile  README.md  jscpd.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docker-publish.yml  linter.yml  release.yml  test-mayapy.yml
src/maya_brew/attributes/: node_attribute.py
src/maya_brew/nodes/: node_types.py
src/mb/: __init__.py  exceptions.py  log.py  scene.py  utils.py
src/mb/attributes/: node_attribute.py
src/mb/maya_initializer/: interactive_init.py  interactive_utils.py  standalone_init.py
src/mb/nodes/: cast.py  node_types.py
super-linter-output/: super-linter-summary.md
tests/maya_brew/: conftest.py
tests/maya_brew/attributes/: test_node_attributes.py
tests/maya_brew/nodes/: test_cast.py  test_node_types.py
tests/mb/: conftest.py  test_scene.py
tests/mb/attributes/: test_node_attributes.py
tests/mb/maya_initializer/: test_standalone_init.py
tests/mb/nodes/: test_cast.py  test_node_types.py
