[project]
name = "maya-brew"
version = "0.1.0"
description = "Safe interaction with python in maya"
readme = "README.md"
license = "MIT"
keywords = ["maya", "autodesk", "3d", "pipeline"]
requires-python = ">=3.11"
authors = [
    { name = "Morten Bøhne", email = "github@mortenbohne.dk" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# PEP 621 dependency list (runtime only)
dependencies = [
    "structlog",
    "colorama",
]

[project.urls]
Homepage = "https://github.com/mortenbohne/maya-brew"
Repository = "https://github.com/mortenbohne/maya-brew"
Documentation = "https://github.com/mortenbohne/maya-brew#readme"
Issues = "https://github.com/mortenbohne/maya-brew/issues"
Changelog = "https://github.com/mortenbohne/maya-brew/releases"

# Poetry-specific configuration that is not part of PEP 621 remains under [tool.poetry]
[tool.poetry]
packages = [
    { include = "mb", from = "src" }
]

# Dev / tool-specific dependencies stay in Poetry groups
[tool.poetry.group.dev.dependencies]
pytest = "*"
maya-stubs = "*"
mypy = "*"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pylint]
ignored-modules = ["maya"]
disable = ["too-few-public-methods", "C", "R", "W", "I"]

[tool.mypy]
mypy_path = ["src"]
# disallow_untyped_defs = true  # Uncomment when ready to enforce everywhere
